--- a/backOffice/package.json
+++ b/backOffice/package.json
@@ -18,6 +18,8 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@mui/x-data-grid-generator": "^7.1.1",
+    "@mui/x-data-grid-premium": "^7.1.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "chart.js": "4.3.0",
